// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test in ProductTitle should render component with the custom title 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;

exports[`Test in ProductTitle should render component with the product name 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee Mug - Card without image
  </span>
</div>
`;
